--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264">
+                    <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264">
+                    <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264">
+                    <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264">
+                    <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
